demos/network-policy-demo/kind-net-policy-lab/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      # Allow ingress/egress ONLY for pod2
      app: pod2
  policyTypes:
    - Ingress
    - Egress
