demos/network-policy-demo/kind-net-policy-lab/netpol2.yaml
#Open comms between pod 1 and pod 2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod2
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: pod1
            #app: pod2 #Extra ingress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: pod1
